Fixed line spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,16 +150,13 @@ span b {
     font-size: 18.5px;
 }
 
-.comment img {
-    margin-top: 5pt;
-}
-
 /* This adds a hanging indent to comments that go over one line. */
 .comment {
     display: flex;
     margin-right: 5px;
     margin-bottom: 5px;
     font-weight: 400;
+    line-height: 18.5px;
 }
 
 /* This adjusts the size of the comment box. */
